# newstarter

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Builds/: CMakeCache.txt  Makefile  cmake_install.cmake
CMake/: CommonSetup.cmake
Jenkins/: buildscript.py  msbuildscript.bat
ex01_basics/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  WordCounter.sln  WordCounter.vcxproj  WordCounter.vcxproj.filters  cmake_install.cmake
ex02_oo_basics/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Shapes.sln  Shapes.vcxproj  Shapes.vcxproj.filters  cmake_install.cmake
exercises-cpp/jonathan_haigh/ex02_oo_basics/: CMakeLists.txt
exercises-cpp/jonathan_haigh/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/Anthony_Lim/ex02_oo_basics/: CMakeLists.txt
exercises/Anthony_Lim/ex02_oo_basics/src/: circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shape_sorter.cpp  shape_sorter.h  square.h  triangle.cpp  triangle.h
exercises/Robert_Applin/ex02_oo_basics/: CMakeLists.txt
exercises/Robert_Applin/ex02_oo_basics/inc/: Circle.h  Rectangle.h  Shape.h  ShapeSorter.h  Square.h  Triangle.h
exercises/Robert_Applin/ex02_oo_basics/src/: Circle.cpp  Rectangle.cpp  ShapeSorter.cpp  Square.cpp  Triangle.cpp  main.cpp
exercises/Stephen_Smith/ex02_oo_basics/: .gitignore  CMakeLists.txt  ex02_Stephen_Smith.sln  ex02_Stephen_Smith.vcxproj  ex02_Stephen_Smith.vcxproj.filters
exercises/Stephen_Smith/ex02_oo_basics/Debug/: ex02_Stephen_Smith.ilk
exercises/Stephen_Smith/ex02_oo_basics/Debug/ex02_Ste.58CBB3CC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ex02_Stephen_Smith.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
exercises/Stephen_Smith/ex02_oo_basics/include/: Circle.h  Rectangle.h  ShapeSorter.h  Shapes.h  Square.h  Triangle.h
exercises/Stephen_Smith/ex02_oo_basics/src/: Circle.cpp  Rectangle.cpp  ShapeSorter.cpp  Shapes.cpp  Square.cpp  Triangle.cpp  main.cpp
exercises/alice_russell/ex02_oo_basics/: CMakeLists.txt
exercises/alice_russell/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/brandon_hewer/ex01_basics/: CMakeLists.txt
exercises/brandon_hewer/ex01_basics/src/: main.cpp  main.h
exercises/brandon_hewer/ex02_oo_basics/: CMakeLists.txt
exercises/brandon_hewer/ex02_oo_basics/inc/: Circle.h  Rectangle.h  Shape.h  ShapeSorter.h  Square.h
exercises/brandon_hewer/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Shapes.sln  Shapes.vcxproj  Shapes.vcxproj.filters  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/conor_finn/ex02_oo_basics/: CMakeLists.txt
exercises/conor_finn/ex02_oo_basics/src/: circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapeSorter.cpp  shapeSorter.h  square.cpp  square.h  triangle.cpp  triangle.h
exercises/david_fairbrother/ex02_oo_basics/: CMakeLists.txt
exercises/david_fairbrother/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeController.cpp  ShapeController.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp  main.h  shapeEnum.h
exercises/edward_brown/ex01_basics/: CMakeLists.txt
exercises/edward_brown/ex01_basics/include/: DiscardWhile.h  FileHelpers.h  ForEachWord.h  MakeWordFrequencyMap.h  Punctuation.h  TakeWhile.h  ToLowerCase.h  WordCharPredicates.h  WordFrequencyTable.h
exercises/edward_brown/ex01_basics/src/: FileHelpers.cpp  Punctuation.cpp  ToLowerCase.cpp  WordCharPredicates.cpp  WordFrequencyTable.cpp  main.cpp
exercises/edward_brown/ex02_oo_basics/: CMakeLists.txt
exercises/edward_brown/ex02_oo_basics/include/: Circle.h  Rectangle.h  Shape.h  ShapeSorter.h  ShapeType.h  Square.h  StdMakeUnique.h  Triangle.h
exercises/edward_brown/ex02_oo_basics/src/: Circle.cpp  Rectangle.cpp  Shape.cpp  ShapeSorter.cpp  ShapeType.cpp  Square.cpp  Triangle.cpp  main.cpp
exercises/gagik_vardanyan/ex02_oo_basics/: CMakeLists.txt
exercises/gagik_vardanyan/ex02_oo_basics/src/: Circle.cpp  Rectangle.cpp  Shape.cpp  ShapeBase.cpp  ShapeSorter.cpp  Triangle.cpp  main.cpp
exercises/gagik_vardanyan/ex02_oo_basics/src/include/: Circle.h  Rectangle.h  Shape.h  ShapeBase.h  ShapeSorter.h  Square.h  Triangle.h
exercises/joseph_ramsay/ex02_oo_basics/: CMakeLists.txt
exercises/joseph_ramsay/ex02_oo_basics/inc/: Circle.h  Rectangle.h  Shape.h  ShapeSorter.h  Square.h  Triangle.h
exercises/joseph_ramsay/ex02_oo_basics/src/: Circle.cpp  Rectangle.cpp  ShapeSorter.cpp  Square.cpp  Triangle.cpp  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapeSorter.cpp  shapeSorter.h  shapes.h  square.cpp  square.h  triangle.cpp  triangle.h
exercises/matthew_bowles/ex02_oo_basics/: CMakeLists.txt
exercises/matthew_bowles/ex02_oo_basics/inc/: Circle.h  Rectangle.h  Shape.h  ShapeSorter.h  Square.h  Triangle.h  main.h
exercises/matthew_bowles/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp  main.h
exercises/sam_jenkins/ex01_basics/: CMakeLists.txt
exercises/sam_jenkins/ex01_basics/src/: 1tringManip.h  MapFunctions.cpp  MapFunctions.h  main.cpp  mapFunctions.cpp  mapFunctions.h  stringManip.cpp  stringManip.h
exercises/tom_perkins/ex02_oo_basics/: CMakeLists.txt
exercises/tom_perkins/ex02_oo_basics/src/: ShapeTester.h  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.h  shapesorter.cpp  shapesorter.h  sidestester.cpp  sidestester.h  square.cpp  square.h  triangle.cpp  triangle.h  typetester.cpp  typetester.h
(+356 files in other folders)
